debug-disk-gpu4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-disk-gpu4
  namespace: default
spec:
  nodeName: k3s-wk-gpu4
  containers:
  - name: debug
    image: alpine:3.18
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: /host
      name: host-root
  volumes:
  - name: host-root
    hostPath:
      path: /
